# llm-from-scratch

./: README.md  model.py  notebook.ipynb  pyproject.toml
